--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -2,6 +2,8 @@ $primary: white !default;
 
 $secondary: #e7e7e7;
 
+$primary-hover: #c6c6c6;
+
 $carousel-height: calc( 100vh - 30px );
 $carousel-height-logged-in: calc( 100vh - 65px );
 
