--- a/sass/theme/template-parts/home/homepage-offers.scss
+++ b/sass/theme/template-parts/home/homepage-offers.scss
@@ -32,6 +32,7 @@ section#offers-section {
             font-family: $font-family-primary;
             font-size: 20px;
             text-transform:uppercase;
+            letter-spacing: 0.12em;
         }
 
         .content {
