--- a/sass/theme/template-parts/layout/global-fonts.scss
+++ b/sass/theme/template-parts/layout/global-fonts.scss
@@ -13,29 +13,68 @@ h1 {
     font-size: $h1-font-size;
 }
 
+.main-content h2 {
+    font-family: $font-family-primary;
+    letter-spacing: 1px;
+    text-transform: capitalize;
+    text-indent: 0px;
+    font-size: 23px;
+    color: #a62502;
+    font-weight: 600;
+    margin-top: 30px;
+}
+
 p {
     font-family: $font-family-paragraph;
     font-weight: 300;
     font-size: $p-font-size;
     line-height: 34px;
+    
+}
+
+.main-content a {
+    color: #d81405;
+    font-family: 'Roboto', sans-serif !important;
+    font-weight: 600 !important;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 16px;
+}
+
+strong {
+    @extend p;
+    font-weight: 500;
 }
 
 .btn {
     text-transform:uppercase;
     position: relative;
+    letter-spacing: 0.12em;
     &:not(.no-star){
         padding-right: 70px;
         &::after {
-            content: '\f005';
-            position:absolute;
+            content: url(/wp-content/uploads/2020/02/blackstar.png);
+            position: absolute;
             right: 10px;
-            font-family: FontAwesome;
+            top: auto;
         }
     }
+}
+
+.btn-primary:hover {
+    background-color: $primary-hover;
+    border-color: $primary-hover;
 }
 
 .arrow-down-section {
     span {
         cursor: pointer;
     }
+}
+
+a.dropdown-item {
+    padding: 10px 20px;
+    font-family: $font-family-paragraph;
+    font-size: 15px;
+    letter-spacing: 0.12em;
 }
